variable length args

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,12 +63,12 @@ body {
   height: 30px;
   border-radius: 50%;
   background-color: lightgreen;
-  animation-name: inline-uaoqsfo;
+  animation-name: inline-uaoqsii;
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
-@keyframes inline-uaoqsfo {
+@keyframes inline-uaoqsii {
   0% {
     transform: translateX(0);
   }
@@ -256,6 +256,28 @@ body {
   font-size: 1rem;
   padding: 0.6rem 0.8rem;
   color: #777;
+}
+
+.form {
+  width: 100%;
+}
+.form input {
+  width: 100%;
+}
+
+input.address {
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+input.name {
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+input.zip {
+  margin-top: 1rem;
+  padding: 1rem;
 }
 
 /*# sourceMappingURL=main.css.map */
