--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,12 +63,12 @@ body {
   height: 30px;
   border-radius: 50%;
   background-color: lightgreen;
-  animation-name: inline-uaoqsii;
+  animation-name: inline-unqzhrc;
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
-@keyframes inline-uaoqsii {
+@keyframes inline-unqzhrc {
   0% {
     transform: translateX(0);
   }
@@ -93,7 +93,7 @@ body {
 .list li {
   margin-bottom: 1.2rem;
   padding: 1rem;
-  background-color: #ddf;
+  background-color: #4dfd3f;
 }
 .list li:hover {
   cursor: pointer;
@@ -222,6 +222,36 @@ body {
   width: 100%;
 }
 
+.code {
+  overflow-x: scroll;
+}
+
+pre span.stx-string {
+  color: #080;
+}
+
+pre span.stx-comment {
+  color: #800;
+}
+
+pre span.stx-variable {
+  color: #60b;
+}
+
+pre span.stx-keyword {
+  color: #f44;
+}
+
+.btn {
+  border: 1px solid green;
+  padding: 1rem 1.2rem;
+  font-size: 1.5rem;
+}
+.btn:not([disable]):hover {
+  border-radius: 10px;
+  transform: translateY(-3px);
+}
+
 .h1 {
   font-size: 6rem;
   padding: 0.6rem 0.8rem;
@@ -268,16 +298,19 @@ body {
 input.address {
   margin-top: 1rem;
   padding: 1rem;
+  font-size: 2rem;
 }
 
 input.name {
   margin-top: 1rem;
   padding: 1rem;
+  font-size: 2rem;
 }
 
 input.zip {
   margin-top: 1rem;
   padding: 1rem;
+  font-size: 2rem;
 }
 
 /*# sourceMappingURL=main.css.map */
